# sharex-cli-fork

./: .gitignore  README.md  build.ps1  pyproject.toml  zensical.toml
.github/: actionlint.yaml
.github/workflows/: build.yaml  docs.yaml  homebrew.yaml  lint.yaml  preview.yaml  pyinstaller.yaml  release.yaml  snapcraft.yaml  test.yaml
docs/: cli.md  index.md  module.md  support.md
docs/overrides/: main.html
docs/snippets/: install.md
snap/: snapcraft.yaml
src/: app.py
src/sharex/: __init__.py  _version.py  api.py  cli.py  utils.py
tests/: config.json  conftest.py  test_all.py
