[project]
name = "sharex-cli"
description = "CLI to Upload Files to a ShareX Server using a ShareX Custom Uploader (.sxcu) Configuration File."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [{ name = "Shane" }]
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = [
  "jsonpath-ng>=1,<2",
  "pyperclip>=1,<2",
  "requests>=2,<3",
  "typer>=0.20.0",
]
dynamic = ["version"]

[project.urls]
Changelog = "https://github.com/cssnr/sharex-cli/releases"
Discord = "https://discord.gg/wXy6m2X8wY"
Documentation = "https://cssnr.github.io/sharex-cli/"
Funding = "https://ko-fi.com/cssnr"
GitHub = "https://github.com/cssnr/sharex-cli"
Homepage = "https://cssnr.com/"
Issues = "https://github.com/cssnr/sharex-cli/issues"

[project.scripts]
sharex = "sharex.cli:app"
sharex-cli = "sharex.cli:app"

[dependency-groups]
dev = [
  "bandit>=1.9.2",
  "black>=25.12.0",
  "coverage>=7.13.0",
  "hatch>=1.16.2",
  "isort>=7.0.0",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "ruff>=0.14.10",
  "tombi>=0.7.8",
  "ty>=0.0.4",
  "typer>=0.20.1",
  "types-pyperclip>=1.9.0.20250801",
  "types-requests>=2.32.4.20250913",
  "validate-pyproject[all]>=0.24.1",
]

# [build-system]
# requires = ["uv_build>=0.9.9,<0.10.0"]
# build-backend = "uv_build"

# https://hatch.pypa.io/latest/config/build/#build-system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Bandit
# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude_dirs = [".venv"]
skips = ["B105", "B107"]

# Black
# https://black.readthedocs.io/en/stable/usage_and_configuration/
[tool.black]
line-length = 119
extend-exclude = '(\.github)'

# Coverage
# https://coverage.readthedocs.io/en/latest/
[tool.coverage.run]
omit = ["_version.py", "utils.py", "cli.py"]
source = ["src"]

# Hatchling
# https://hatch.pypa.io/latest/config/build/#build-system
[tool.hatch.version]
path = "src/sharex/_version.py"

[tool.hatch.build.targets.sdist]
include = ["src", "CONTRIBUTING.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/sharex"]

# Isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
lines_after_imports = 2
src_paths = ["src", "test"]
skip = [".venv", ".github"]

# Mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
# ignore_missing_imports = true
exclude = [".venv"]

[[tool.mypy.overrides]]
module = ["jsonpath_ng.*"]
follow_untyped_imports = true

# Ruff
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 119
target-version = "py313"
extend-exclude = [".github"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]
